Bug 145212. Fix overflow:auto on auto-height elements. r=hyatt,sr=kin